--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bcrypt": "^5.0.1",
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.7.2",
+    "cors": "^2.8.5",
     "next": "12.0.4",
     "next-auth": "^4.0.6",
     "react": "17.0.2",
