--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "next": "12.0.4",
     "next-auth": "^4.0.6",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-draft-wysiwyg": "^1.14.7"
   },
   "devDependencies": {
     "eslint": "7.32.0",
