--- a/package.json
+++ b/package.json
@@ -13,11 +13,18 @@
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.7.2",
     "cors": "^2.8.5",
+    "draft-js-katex-plugin": "^1.3.1",
+    "draft-js-latex-plugin": "^0.1.1",
+    "katex": "^0.15.2",
+    "mathquill": "^0.10.1",
+    "mathquill4quill": "^2.3.0",
     "next": "12.0.4",
     "next-auth": "^4.0.6",
+    "quill": "^1.3.7",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-draft-wysiwyg": "^1.14.7"
+    "react-draft-wysiwyg": "^1.14.7",
+    "react-quill": "^1.3.5"
   },
   "devDependencies": {
     "eslint": "7.32.0",
