--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.7.2",
     "cors": "^2.8.5",
+    "jquery": "^3.6.0",
     "katex": "^0.15.2",
     "mathquill": "^0.10.1",
     "mathquill4quill": "^2.3.0",
@@ -25,8 +26,14 @@
     "react-quill": "^1.3.5"
   },
   "devDependencies": {
+    "csv": "^6.0.5",
+    "d3-fetch": "^3.0.1",
     "eslint": "7.32.0",
     "eslint-config-next": "12.0.4",
+    "fast-csv": "^4.3.6",
+    "node-fetch": "^3.2.3",
+    "node-fetch-polyfill": "^2.0.6",
+    "node-quill-converter": "^0.3.3",
     "prisma": "^3.6.0"
   }
 }
